feat: order endpoints with tests
